<resources>
    <string name="app_name">My Application</string>
    <string name="title_login">Sign In</string>
    <string name="title_register">Sign Up</string>
    <string name="desc_login">Please sign in to your account</string>
    <string name="desc_register">Create a ne account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="have_account">Already have an account?</string>


</resources>